# mls-spec

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: credential.rs  crypto.rs  error.rs  group.rs  key_package.rs  key_schedule.rs  lib.rs  macros.rs  messages.rs  sensitive_bytes.rs  test_utils.rs  tlspl.rs  tree.rs
src/defs/: labels.rs  mod.rs
src/drafts/: additional_wire_formats.rs  associated_parties.rs  hpq_mls_combiner.rs  mls_light.rs  mod.rs  ratchet_tree_options.rs  sd_cwt_credential.rs  semiprivate_message.rs  split_commit.rs
src/drafts/mls_extensions/: app_ack.rs  content_advertisement.rs  last_resort_keypackage.rs  mod.rs  multi_credentials.rs  safe_application.rs  self_remove.rs  targeted_message.rs
src/group/: commits.rs  extensions.rs  group_info.rs  proposals.rs  welcome.rs
src/messages/: content.rs  content_encryption.rs  content_type.rs  message_kinds.rs  sender.rs
src/tree/: hashes.rs  leaf_node.rs
tests/: spec-test-vectors.rs
tests/spec-test-vectors/: deserialization.rs  messages.rs
